--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -13,7 +13,6 @@
   box-shadow: 0 7px 15px 0 rgba(0, 1, 1, 0.15);
 
   &__title {
-    font-family: $default-font;
     font-weight: bold;
     font-size: 18px;
     line-height: 24px;
@@ -21,7 +20,6 @@
   }
 
   &__text {
-    font-family: $default-font;
     font-weight: lighter;
     font-size: 14px;
     line-height: 24px;
@@ -36,5 +34,56 @@
   &--show {
     display: block;
     animation: bounce 0.6s;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .modal {
+    width: 460px;
+    min-height: 363px;
+    padding: 33px 82px 54px;
+    left: calc(50vw - 230px);
+    bottom: calc(50vh - 160px);
+
+    &--success {
+      background: linear-gradient(0deg, $background-color-main--additional 160px, $background-color-main 160px);
+    }
+
+    &__title {
+      margin-top: 0;
+      font-size: 30px;
+      line-height: 40px;
+      padding: 0 18px;
+    }
+
+    &__text {
+      font-size: 18px;
+      padding: 0 29px;
+    }
+
+    &__button {
+      margin-top: 85px;
+    }
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .modal {
+    width: 780px;
+    min-height: 337px;
+    left: calc(50vw - 390px);
+    padding: 50px 162px 54px;
+
+    background: linear-gradient(0deg, $background-color-main--additional 160px, $background-color-main 160px);
+
+    &--success &__button {
+      margin-top: 85px;
+    }
+
+    &--error &__button {
+      margin: 0 auto;
+      margin-top: 110px;
+      width: 296px;
+    }
   }
 }
