--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -90,6 +90,7 @@
     &__wrapper--menu-closed &__toggle {
       width: 50px;
       height: 24px;
+      margin-top: 17px;
     }
 
     &__wrapper--menu-opened &__toggle {
