--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -63,6 +63,10 @@
       margin-top: 19px;
     }
 
+    &__wrapper--menu-closed &__toggle {
+      margin-top: 17px;
+    }
+
     &__wrapper &__logo-toggle-wrapper {
       padding-top: 26px;
       padding-right: 20px;
@@ -90,7 +94,6 @@
     &__wrapper--menu-closed &__toggle {
       width: 50px;
       height: 24px;
-      margin-top: 17px;
     }
 
     &__wrapper--menu-opened &__toggle {
