--- a/source/sass/blocks/editing.scss
+++ b/source/sass/blocks/editing.scss
@@ -96,11 +96,13 @@
 
     &__list {
       display: block;
-      padding-top: 0;
-      padding-bottom: 47px;
+      padding-top: 9px;
+      padding-bottom: 44px;
     }
 
     &__element {
+      display: flex;
+      justify-content: space-around;
       padding-bottom: 20px;
       position: relative;
     }
@@ -122,11 +124,11 @@
     }
 
     &__label {
-      display: flex;
-      justify-content: space-around;
-      margin-bottom: 21px;
-      margin-top: 8px;
-      margin-right: -5px;
+      //display: flex;
+      //justify-content: space-around;
+      margin-bottom: 20px;
+      //margin-top: 8px;
+      margin-right: 4px;
     }
 
     &__icon--crop {
@@ -145,7 +147,7 @@
       width: 16px;
       height: 16px;
       margin-left: -9px;
-      margin-top: 1px;
+      margin-top: 0;
     }
 
     &__icon,
@@ -162,7 +164,7 @@
       display: block;
       width: 202px;
       margin: 0;
-      margin-right: -4px;
+      margin-right: -11px;
     }
 
     &__button {
@@ -182,14 +184,18 @@
       padding-right: 0;
     }
 
+    &__list {
+      padding-top: 0;
+    }
+
     &__label {
       margin-bottom: 22px;
       margin-top: 0;
-      justify-content: space-between;
     }
 
     &__element {
-      padding-bottom: 9px;
+      padding-bottom: 0;
+      justify-content: space-between;
     }
 
     &__element:first-child::before {
@@ -224,7 +230,8 @@
 
     &__range {
       width: 288px;
-      margin-right: 34px;
+      margin-right: 30px;
+      margin-top: 10px;
     }
 
     &__button {
@@ -235,7 +242,7 @@
     &__buttons-wrapper {
       display: flex;
       justify-content: space-between;
-      margin-top: 88px;
+      margin-top: 93px;
     }
   }
 }
