--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -61,11 +61,11 @@
     fill: $blue--dark;
   }
 
-  &__logo-image:hover {
+  &__logo-link[href] &__logo-image:hover {
     fill: $pink;
   }
 
-  &__logo-image:active {
+  &__logo-link[href] &__logo-image:active {
     fill: $blue--dark;
     opacity: 0.3;
   }
