фиксит стили для спрайа и псевдожлемент в photo.html

--- a/source/sass/blocks/editing.scss
+++ b/source/sass/blocks/editing.scss
@@ -35,7 +35,7 @@
     width: 100vw;
     height: 1px;
     top: 154px;
-    left: -20px;
+    left: calc(-50vw + 140px);
     background-color: rgba($blue--dark, 0.033);
   }
 
