--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -49,7 +49,6 @@
   &__img {
     margin-bottom: -8px;
     fill: $pink;
-
   }
 
   &__img--youtube {
@@ -68,6 +67,14 @@
   &__logo-link[href] &__logo-image:active {
     fill: $blue--dark;
     opacity: 0.3;
+  }
+
+  &__pink-logo {
+    display: none;
+  }
+
+  &__pink-logo--mobile {
+    display: block;
   }
 }
 
@@ -113,6 +120,14 @@
     &__img--youtube {
       margin-bottom: -6px;
       margin-right: -2px;
+    }
+
+    &__pink-logo--mobile {
+      display: none;
+    }
+
+    &__pink-logo--desktop {
+      display: block;
     }
   }
 }
