фикс разметки для критерия Б5

--- a/source/sass/blocks/competition.scss
+++ b/source/sass/blocks/competition.scss
@@ -7,11 +7,9 @@
     line-height: 30px;
     color: $text-color;
     text-align: center;
-
-    //background-color: $background-color-main;
   }
 
-  &__slogan--form {
+  &__slogan-form {
     display: none;
   }
 
