--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -3,10 +3,8 @@
   &__item {
     text-align: center;
     vertical-align: center;
-    //background-color: $background-color-header--opened;
     box-shadow: 0 1px 0 0 $black, inset 0 1px 0 0 rgba($white, 0.15);
-
-    //min-height: 64px;
+    margin-top: 1px;
   }
 
   &__item:hover a[href] {
@@ -23,7 +21,7 @@
 
     width: 100%;
     height: 100%;
-    padding: 16px 0;
+    padding: 16px 0 15px;
 
     color: $menu-mobile-color;
     text-decoration: none;
