--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -7,12 +7,13 @@
 
   background-color: $background-color-intro;
   background-image: url("../img/bg-back-mobile@1x.jpg");
-  background-position: center 0;
   background-repeat: no-repeat;
+  background-position: center 0;
+  background-size: 100%;
 
   @media (min-resolution: $retina-dppx), (min-resolution: $retina-dpi) {
     background-image: url("../img/bg-back-mobile@2x.jpg");
-    background-size: 320px auto;
+    //background-size: 320px auto;
     background-position-y: -3px;
   }
 
@@ -39,6 +40,7 @@
     background-image: url("../img/iphone-hand-mobile@1x.png");
     background-position: 0 175px;
     background-repeat: no-repeat;
+
 
     @media (min-resolution: $retina-dppx), (min-resolution: $retina-dpi) {
       background-image: url("../img/iphone-hand-mobile@2x.png");
@@ -95,6 +97,8 @@
     min-height: 440px;
 
     background-image: url("../img/bg-back-tablet@1x.jpg");
+    background-position: center 0;
+    background-size: auto;
 
     @media (min-resolution: $retina-dppx), (min-resolution: $retina-dpi) {
       background-image: url("../img/bg-back-tablet@2x.jpg");
