--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,6 +2,8 @@
 @import "fonts";
 @import "variables";
 @import "scaffolding";
+@import "mixins";
+@import "animations";
 @import "blocks/visually-hidden";
 @import "blocks/button";
 @import "blocks/list";
