добавляет фиксы и picturefill.js для поддержки source в IE11

--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -36,6 +36,10 @@
     display: none;
   }
 
+  &__picture img {
+    -ms-wrap-margin: 42px;
+  }
+
   &__item:last-child &__picture {
     display: block;
     order: 2;
