--- a/source/sass/blocks/editing.scss
+++ b/source/sass/blocks/editing.scss
@@ -1,13 +1,8 @@
 .editing {
-  &__img {
-    width: 300px;
-    height: 400px;
-  }
-
   &__list {
     position: relative;
-    padding-top: 41px;
-    padding-bottom: 101px;
+    padding-top: 34px;
+    padding-bottom: 100px;
     display: flex;
     width: 100%;
     justify-content: space-evenly;
@@ -21,11 +16,41 @@
   &__range {
     display: none;
     width: 240px;
-    margin: 0 auto;
-    margin-bottom: 58px;
+    margin: 0 auto 61px;
     position: absolute;
-    bottom: 3px;
+    bottom: 0;
     left: 18px;
+  }
+
+  &__range-line {
+    display: none;
+    width: 240px;
+    height: 2px;
+    margin: 0 auto 72px;
+    position: absolute;
+    bottom: 0;
+    left: 18px;
+
+    background-color: $black;
+  }
+
+  &__range-line::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: -6px;
+    left: 0;
+    box-sizing: border-box;
+    width: 14px;
+    height: 15px;
+    border: 2px solid $pink;
+    border-radius: 50%;
+
+    background-color: $white;
+  }
+
+  &__range-line--crop::before {
+    left: 80%;
   }
 
   &__element::before {
@@ -47,6 +72,12 @@
   &__radio--crop:checked ~ &__list &__range--crop,
   &__radio--fill:checked ~ &__list &__range--fill,
   &__radio--contrast:checked ~ &__list &__range--contrast {
+    display: block;
+  }
+
+  &__radio--crop:checked ~ &__list &__range-line--crop,
+  &__radio--fill:checked ~ &__list &__range-line--fill,
+  &__radio--contrast:checked ~ &__list &__range-line--contrast {
     display: block;
   }
 
@@ -89,6 +120,11 @@
 
 @media (min-width: $tablet-width) {
   .editing {
+    &__img {
+      width: 300px;
+      height: 400px;
+    }
+
     &__input-wrapper {
       width: 260px;
       padding-right: 13px;
@@ -97,13 +133,14 @@
     &__list {
       display: block;
       padding-top: 9px;
-      padding-bottom: 44px;
+      padding-bottom: 45px;
     }
 
     &__element {
       display: flex;
       justify-content: space-around;
-      padding-bottom: 20px;
+      padding-bottom: 19px;
+      padding-right: 1px;
       position: relative;
     }
 
@@ -124,29 +161,25 @@
     }
 
     &__label {
-      //display: flex;
-      //justify-content: space-around;
       margin-bottom: 20px;
-      //margin-top: 8px;
-      margin-right: 4px;
+      margin-left: -3px;
     }
 
     &__icon--crop {
       width: 22px;
       height: 22px;
-      margin-left: -14px;
     }
 
     &__icon--fill {
+      margin-left: -12px;
+      margin-top: 4px;
       width: 24px;
-      height: 22px;
-      margin-left: -13px;
+      height: 24px;
     }
 
     &__icon--contrast {
       width: 16px;
       height: 16px;
-      margin-left: -9px;
       margin-top: 0;
     }
 
@@ -160,11 +193,36 @@
       position: static;
     }
 
+    &__radio ~ &__list &__range-line {
+      position: static;
+    }
+
     &__range {
       display: block;
       width: 202px;
       margin: 0;
-      margin-right: -11px;
+      margin-right: -8px;
+    }
+
+    &__range-line {
+      display: block;
+      width: 202px;
+      margin: 12px -11px 0 0;
+    }
+
+    &__range-line--crop::before {
+      top: 4px;
+      left: 199px;
+    }
+
+    &__range-line--fill::before {
+      top: 7px;
+      left: 78px;
+    }
+
+    &__range-line--contrast::before {
+      top: 5px;
+      left: 149px;
     }
 
     &__button {
@@ -191,6 +249,7 @@
     &__label {
       margin-bottom: 22px;
       margin-top: 0;
+      margin-left: 1px;
     }
 
     &__element {
@@ -216,7 +275,7 @@
 
     &__icon--fill {
       width: 48px;
-      height: 43px;
+      height: 48px;
       margin-left: 0;
       margin-top: -1px;
     }
@@ -232,6 +291,31 @@
       width: 288px;
       margin-right: 30px;
       margin-top: 10px;
+    }
+
+    &__range-line {
+      width: 288px;
+      margin-right: 30px;
+      margin-top: 20px;
+    }
+
+    &__range-line--crop::before {
+      top: 13px;
+      left: 163px;
+    }
+
+    &__range-line--fill::before {
+      top: 14px;
+      left: 339px;
+    }
+
+    &__range-line--contrast::before {
+      top: 13px;
+      left: 252px;
+    }
+
+    &__element:nth-child(2) &__label {
+      margin-bottom: 15px;
     }
 
     &__button {
