--- a/source/sass/blocks/post-content.scss
+++ b/source/sass/blocks/post-content.scss
@@ -37,7 +37,7 @@
   }
 
   &__posting-time {
-    font-weight: 200;
+    font-weight: 300;
     font-size: 12px;
     text-transform: uppercase;
   }
@@ -50,6 +50,10 @@
     font-size: 14px;
     line-height: 24px;
     color: $text-color;
+  }
+
+  &__mobile-hidden {
+    display: none;
   }
 
   &__likes {
@@ -83,12 +87,16 @@
       left: calc(-53vw + 50%);
     }
 
+    &__mobile-hidden {
+      display: inline;
+    }
+
     &__text {
       position: relative;
-      min-height: 110px;
+      min-height: 74px;
       padding-top: 24px;
       padding-right: 28px;
-      padding-bottom: 21px;
+      padding-bottom: 56px;
       padding-left: 28px;
     }
 
