--- a/source/sass/blocks/research.scss
+++ b/source/sass/blocks/research.scss
@@ -12,7 +12,7 @@
     position: relative;
     padding-left: 308px;
 
-    background: url("../../img/icon-timer.svg") no-repeat 0 0;
+    background: url("../img/icon-timer.svg") no-repeat 0 0;
     background-size: 238px 276px;
   }
 
