--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -5,6 +5,7 @@
     url("../fonts/opensans.woff") format("woff");
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -12,8 +13,9 @@
   src:
     url("../fonts/opensanslight.woff2") format("woff2"),
     url("../fonts/opensanslight.woff") format("woff");
-  font-weight: 200;
+  font-weight: 300;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -23,4 +25,5 @@
     url("../fonts/opensansbold.woff") format("woff");
   font-weight: bold;
   font-style: normal;
+  font-display: swap;
 }
