--- a/source/sass/normalize.scss
+++ b/source/sass/normalize.scss
@@ -10,7 +10,7 @@
 
 html {
   line-height: 1.15; /* 1 */
-  -webkit-text-size-adjust: 100%; /* 2 */
+  //-webkit-text-size-adjust: 100%; /* 2 */
 }
 
 /* Sections
@@ -62,7 +62,7 @@ hr {
  */
 
 pre {
-  font-family: monospace, monospace; /* 1 */
+  //font-family: monospace, monospace; /* 1 */
   font-size: 1em; /* 2 */
 }
 
@@ -85,7 +85,7 @@ a {
 abbr[title] {
   border-bottom: none; /* 1 */
   text-decoration: underline; /* 2 */
-  text-decoration: underline dotted; /* 2 */
+  //text-decoration: underline dotted; /* 2 */
 }
 
 /**
@@ -105,7 +105,7 @@ strong {
 code,
 kbd,
 samp {
-  font-family: monospace, monospace; /* 1 */
+  //font-family: monospace, monospace; /* 1 */
   font-size: 1em; /* 2 */
 }
 
@@ -192,12 +192,12 @@ select { /* 1 */
  * Correct the inability to style clickable types in iOS and Safari.
  */
 
-button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
-  -webkit-appearance: button;
-}
+//button,
+//[type="button"],
+//[type="reset"],
+//[type="submit"] {
+//  -webkit-appearance: button;
+//}
 
 /**
  * Remove the inner border and padding in Firefox.
@@ -288,7 +288,7 @@ textarea {
  */
 
 [type="search"] {
-  -webkit-appearance: textfield; /* 1 */
+  //-webkit-appearance: textfield; /* 1 */
   outline-offset: -2px; /* 2 */
 }
 
@@ -296,9 +296,9 @@ textarea {
  * Remove the inner padding in Chrome and Safari on macOS.
  */
 
-[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
+//[type="search"]::-webkit-search-decoration {
+//  -webkit-appearance: none;
+//}
 
 /**
  * 1. Correct the inability to style clickable types in iOS and Safari.
@@ -306,7 +306,7 @@ textarea {
  */
 
 ::-webkit-file-upload-button {
-  -webkit-appearance: button; /* 1 */
+  //-webkit-appearance: button; /* 1 */
   font: inherit; /* 2 */
 }
 
